<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_date_range_white_24dp"
                android:title="@string/day_of_week"/>
        <item
                android:id="@+id/nav_sequence"
                android:icon="@drawable/ic_functions_white_24dp"
                android:title="@string/arithmetic_sequence"/>
        <item
                android:id="@+id/nav_nbc"
                android:icon="@drawable/ic_functions_white_24dp"
                android:title="@string/number_base_converter"/>
    </group>

    <item android:title="@string/combinatorics">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_combination"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/combinations"/>
                <item
                        android:id="@+id/nav_permutation"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/permutations"/>
                <item
                        android:id="@+id/nav_risingFactorial"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/rising_factorial"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/numbers">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_divisors"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/find_divisors"/>
                <item
                        android:id="@+id/nav_factors"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/find_factors"/>
                <item
                        android:id="@+id/nav_multiples"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/multiples_generator"/>
                <item
                        android:id="@+id/nav_gcd"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/greatest_common_divisor"/>
                <item
                        android:id="@+id/nav_lcm"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/least_common_multiple"/>
                <item
                        android:id="@+id/nav_primeNumbers"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/prime_numbers_generator"/>
                <item
                        android:id="@+id/nav_modularEquation"
                        android:icon="@drawable/ic_functions_white_24dp"
                        android:title="@string/modular_equation_solver"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/management">
        <menu>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_help_white_24dp"
                    android:title="@string/about"/>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_white_24dp"
                    android:title="@string/settings"/>
        </menu>
    </item>

</menu>
